force-app/main/default/objects/General_Settings__c/General_Settings__c.object-meta.xml
<CustomObject>
    <description>Object to set settings globally. This should only be enabled for Administrators</description>
    <label>General Settings</label>
    <nameField>
        <label>General Settings</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>