force-app/main/default/objects/General_Settings__c/fields/Don_Mario__c.field-meta.xml
<CustomField>
    <fullName>Don_Mario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Don Mario Licensing responsable</description>
    <label>Don Mario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings2</relationshipName>
    <type>Lookup</type>
</CustomField>