force-app/main/default/objects/General_Settings__c/fields/GDM_Licensing__c.field-meta.xml
<CustomField>
    <fullName>GDM_Licensing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GDM Licensing Responsable</description>
    <label>GDM Licensing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>