force-app/main/default/objects/General_Settings__c/fields/License_change_notifications__c.field-meta.xml
<CustomField>
    <fullName>License_change_notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>License change notification to corresponding user responables</description>
    <label>License change notifications</label>
    <type>Checkbox</type>
</CustomField>