force-app/main/default/objects/General_Settings__c/fields/Virtue__c.field-meta.xml
<CustomField>
    <fullName>Virtue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Virtue licensing responsable</description>
    <label>Virtue</label>
    <referenceTo>User</referenceTo>
    <relationshipName>General_Settings1</relationshipName>
    <type>Lookup</type>
</CustomField>